--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,23 @@
 <resources>
-    <string name="app_name">ClassBell</string>
-    <string name="action_settings">Settings</string>
+    <!--<string name="app_name">ClassBell</string>-->
+    <!--<string name="action_settings">Settings</string>-->
 
-    <string name="title_activity_splash">SplashActivity</string>
+    <!--<string name="title_activity_splash">SplashActivity</string>-->
+    <!--<string name="dummy_button">Dummy Button</string>-->
+    <!--<string name="dummy_content">DUMMY\nCONTENT</string>-->
+    <!--<string name="title_activity_main">MainActivity</string>-->
+    <!--<string name="title_week_schedule">schedule</string>-->
+    <!--<string name="title_lessons">lessons</string>-->
+    <!--<string name="title_achievements">achievements</string>-->
+    <string name="app_name">上课铃</string>
+    <string name="action_settings">设置</string>
+
+    <string name="title_activity_splash">引导页</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_main">主页</string>
+    <string name="title_week_schedule">本周课程</string>
+    <string name="title_lessons">课程</string>
+    <string name="title_achievements">成就</string>
+    <string name="title_settings">设置</string>
 </resources>
